syntax = "proto3";

package app;


service AppController {
  rpc ProcessEcho (Echo) returns (EchoResponse);
}

message Echo {
  string echo = 1;
}
message EchoResponse {
  string response = 1;
}